# Sribuu

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SRIBUU_DESIGN.md  _worker.ts  build.py  docker-compose.yml  generate_weekly_summary.py  models.py  package-lock.json  package.json  preview.html  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  tsconfig.json  vitest.config.ts  wrangler.jsonc  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  ios-build.yml  test.yml
backend/: .env.example  alembic.ini  app.py  config.py  database.py  main.py
backend/api/: bills.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: .gitkeep  0c530f594843_add_transaction_templates.py  3e95af58886f_add_rollover_to_budgets.py  79071da84543_merge_subscription_and_parent_.py  a1b2c3d4e5f6_add_bills_table.py  b4a7f2e9c8d1_add_parent_transaction_id_for_splits.py  c1e7a2d8f3b5_add_attachment_path_to_transactions.py  c6b2e9a3d0f4_add_notification_preferences.py  d68b70c94166_add_rules_table.py  d89c6b595fad_initial_schema.py  f4d288e1b03d_add_budgets_table.py  f7e3d8a2b1c4_add_subscriptions_table.py
backend/models/: __init__.py
backend/routers/: auth.py  bills.py  budgets.py  categories.py  expense_templates.py  export.py  notifications.py  pages.py  payment_methods.py  reports.py  rules.py  stats.py  subscriptions.py  transactions.py
backend/schemas/: auth.py  bill.py  budget.py  category.py  rule.py  stats.py  subscription.py  template.py  transaction.py
backend/services/: auth_service.py  bill_service.py  budget_service.py  category_service.py  export_service.py  notification_service.py  pdf_service.py  rule_service.py  seed.py  stats_service.py  subscription_service.py  template_service.py  transaction_service.py
backend/tests/: conftest.py  test_auth.py  test_bills.py  test_budgets.py  test_categories.py  test_export.py  test_notifications.py  test_reports.py  test_stats.py  test_transactions.py
backend/utils/: __init__.py  formatting.py  logging.py  middleware.py  security.py  time.py
docs/: ADD-Pencatatan-Pengeluaran-Harian.md  PRD-Pencatatan-Pengeluaran-Harian.md
docs/agents/: README.md  ba-agent.md  backend-agent.md  backend.md  business-analyst.md  daily-log.md  daily-progress.md  database-agent.md  database.md  devops-agent.md  devops.md  frontend-agent.md  frontend.md  mobile-agent.md  mobile.md  qa-agent.md  qa.md  scrum-master.md  security-agent.md  security.md
e2e/: conftest.py  test_auth.py  test_budgets.py  test_dashboard.py  test_navigation.py  test_transactions.py
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/ios/: ExportOptions.plist
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
frontend/static/: manifest.json  sw.js
frontend/templates/: annual_summary.html  base.html  dashboard.html  settings.html  stats.html
frontend/tests/: test_templates.py
functions/: [[path]].js  [[path]].ts
migrations/: 0001_create_tables.sql  0001_initial.sql  0002_seed_defaults.sql  0003_drop_broken_indexes.sql  0004_add_missing_columns.sql  0007_add_rules_condition_columns.sql
public/: app.html  app.js  index.html  styles.css
scripts/: backup.sh  healthcheck.sh  logrotate-sribuu.conf  migrate_sqlite_to_postgresql.py  rollback.sh  setup-vps.sh  sribuu.nginx.conf  sribuu.service
src/: index.ts  utils.ts
tests/: api.test.ts  utils.test.ts
tests/e2e/: app.spec.ts  playwright.config.ts
(+33 files in other folders)
