[project]
name = "sribuu"
version = "1.0.0"
description = "Aplikasi Pencatatan Pengeluaran Harian"
requires-python = ">=3.11"
license = { text = "MIT" }

# ─── Ruff ───────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "venv",
    ".venv",
    "migrations",
    "alembic",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Bugbear
    "B",
    # Sim
    "SIM",
    # Pylint
    "PL",
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ─── Mypy ───────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
    "bcrypt.*",
    "aiosqlite.*",
    "jinja2.*",
]
ignore_missing_imports = true

# ─── Pytest ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["backend/tests", "frontend/tests"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["backend", "frontend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
precision = 1

[tool.coverage.html]
directory = "htmlcov"

# ─── Bandit ─────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "migrations"]
severity = "medium"
skips = ["B101", "B104"]
