[project]
name = "sribuu"
version = "1.0.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
explicit_package_bases = true
files = ["backend/"]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "sqlalchemy.ext.*",
    "sqlalchemy.orm.*",
    "reportlab.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.services.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.routers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.schemas.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.database"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.migrations.*"
ignore_errors = true

[tool.ruff]
exclude = ["migrations", ".venv", "venv", "__pycache__"]

[tool.bandit]
exclude_dirs = ["migrations", "venv", ".venv"]
skips = ["B101", "B105", "B404", "B603"]
